--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "kiddo-zone-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -17,5 +16,6 @@
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
     "vercel": "^29.3.4"
-  }
+  },
+  "description": ""
 }
